--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+:root {
+  --text: #dddddd;
+  --header-text: #ffffff;
+  --link-text: #49ee57;
+  --background: #1a1a1a;
+  --code-background: #313131;
+  --header-background: rgba(255, 255, 255, 0.067);
+  --container-background: #414141;
+  --shadow: rgba(0, 0, 0, 0.35);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -6,18 +17,11 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #ffffff;
-  background-color: #1a1a1a;
+  color: var(--header-text);
+  background-color: var(--background);
 }
 
-p {
-  color: #dddddd;
-}
-
-nav {
+header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -27,46 +31,68 @@ nav {
   width: 100%;
   height: 4rem;
   padding: 2rem;
-  margin-bottom: 4rem;
+  box-shadow: var(--shadow) 0px 3px 8px;
   backdrop-filter: blur(4px);
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  background-color: #ffffff11;
+  background-color: var(--header);
 }
 
-nav .links {
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+
+nav ul {
   display: flex;
   flex-direction: row;
   justify-content: end;
   gap: 2rem;
+  list-style-type: none;
 }
 
-nav svg {
+#link-burger-icon {
   display: none;
+  width: 2rem;
+  height: 2rem;
 }
 
-.container:first-of-type {
-  margin-top: 8rem;
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.container {
+article {
   width: 50%;
   margin-bottom: 4rem;
   padding: 2rem;
   border-radius: 25px;
   line-height: 1.3;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  background-color: #414141;
+  box-shadow: var(--shadow) 0px 5px 15px;
+  background-color: var(--container-background);
 }
 
-.container-title {
+article:first-of-type {
+  margin-top: 8rem;
+}
+
+article h2 {
   width: 100%;
   margin-bottom: 2rem;
   text-align: center;
 }
 
-.container-header {
+section h3 {
   margin-top: 2rem;
-  margin-bottom: 0.2rem;
+}
+
+section p+h4 {
+  margin-top: 1rem;
+}
+
+p {
+  color: var(--text);
 }
 
 a,
@@ -76,7 +102,7 @@ a:hover,
 a:active {
   display: inline-block;
   text-decoration: none;
-  color: #49ee57;
+  color: var(--link-text);
 }
 
 a::after {
@@ -84,12 +110,8 @@ a::after {
   height: 2px;
   display: block;
   content: '';
-  background: #49ee57;
+  background: var(--link-text);
   transition: 300ms;
-}
-
-.links a::after {
-  margin-top: 2px;
 }
 
 a:hover::after {
@@ -101,24 +123,20 @@ a:hover::after {
     font-size: 0.8rem;
   }
   
-  .container {
+  article {
     width: 95%;
     padding: 1rem;
   }
 
-  nav {
+  header {
     backdrop-filter: blur(6px);
   }
   
-  nav svg {
+  #link-burger-icon {
     display: block;
   }
 
-  nav .links {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
+  nav {
     position: absolute;
     top: 4rem;
     right: -100%;
@@ -126,16 +144,22 @@ a:hover::after {
     height: 100vh;
     padding-top: 1rem;
     font-size: 1rem;
-    backdrop-filter: blur(6px);
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    background-color: #414141;
-    
-    right: -100%;
+    box-shadow: var(--shadow) 0px 3px 8px;
     transition: right 200ms linear;
+    background-color: var(--container-background);
   }
-  
-  nav .links.active {
+
+  nav.active {
     right: 0;
+  }
+
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
   }
 
   a::after {
