--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ header {
   padding: 2rem;
   box-shadow: var(--shadow) 0px 3px 8px;
   backdrop-filter: blur(4px);
-  background-color: var(--header);
+  background-color: var(--header-background);
 }
 
 nav {
